#add_executable(3ex00 module03/ex00/ClapTrap.cpp module03/ex00/ClapTrap.hpp module03/ex00/main.cpp)
#add_executable(3ex01
#		module03/ex01/ClapTrap.cpp
#		module03/ex01/ClapTrap.hpp
#		module03/ex01/main.cpp
#		module03/ex01/ScavTrap.cpp
#		module03/ex01/ScavTrap.hpp)

add_executable(3ex02
		module03/ex02/ClapTrap.cpp
		module03/ex02/ClapTrap.hpp
		module03/ex02/main.cpp
		module03/ex02/Makefile
		module03/ex02/ScavTrap.cpp
		module03/ex02/ScavTrap.hpp
		module03/ex02/FlapTrap.cpp
		module03/ex02/FlapTrap.hpp)