#
#add_executable(0ex01 module00/ex01/Contact.cpp
#		module00/ex01/main.cpp
#		module00/ex01/PhoneBook.cpp
#	)

#add_executable(try_catch test/try_catch.cpp)
#add_executable(file test/file.cpp)
#add_executable(try test/try.cpp)
#add_executable(3ex00 module03/ex00/ClapTrap.cpp module03/ex00/ClapTrap.hpp module03/ex00/main.cpp)
#add_executable(3ex01
#		module03/ex01/ClapTrap.cpp
#		module03/ex01/ClapTrap.hpp
#		module03/ex01/main.cpp
#		module03/ex01/ScavTrap.cpp
#		module03/ex01/ScavTrap.hpp)

#add_executable(3ex02
#		module03/ex02/ClapTrap.cpp
#		module03/ex02/ClapTrap.hpp
#		module03/ex02/main.cpp
#		module03/ex02/Makefile
#		module03/ex02/ScavTrap.cpp
#		module03/ex02/ScavTrap.hpp
#		module03/ex02/FragTrap.cpp
#		module03/ex02/FragTrap.hpp)

#add_executable(3ex00
#		module03/ex00/ClapTrap.cpp
#		module03/ex00/ClapTrap.hpp
#		module03/ex00/main.cpp)
#
#add_executable(3ex03
#		module03/ex03/ClapTrap.cpp
#		module03/ex03/ClapTrap.hpp
#		module03/ex03/main.cpp
#		module03/ex03/Makefile
#		module03/ex03/ScavTrap.cpp
#		module03/ex03/ScavTrap.hpp
#		module03/ex03/FragTrap.cpp
#		module03/ex03/FragTrap.hpp module03/ex03/DiamondTrap.cpp module03/ex03/DiamondTrap.hpp)

#add_executable(4ex00	module04/ex00/main.cpp
#						module04/ex00/Animal.cpp
#						module04/ex00/Dog.cpp
#						module04/ex00/Cat.cpp
#						module04/ex00/WrongCat.cpp
#						module04/ex00/WrongAnimal.cpp module04/ex03/main.cpp)
#add_executable(4ex01	module04/ex01/main.cpp
#						module04/ex01/Animal.cpp
#						module04/ex01/Dog.cpp
#						module04/ex01/Cat.cpp
#						module04/ex01/WrongCat.cpp
#						module04/ex01/WrongAnimal.cpp
#						module04/ex01/Brain.cpp
#						module04/ex01/Brain.hpp)
#add_executable(4ex02	module04/ex02/main.cpp
#						module04/ex02/Animal.cpp
#						module04/ex02/Dog.cpp
#						module04/ex02/Cat.cpp
#						module04/ex02/Brain.cpp
#						module04/ex02/Brain.hpp)
#
#add_executable(4ex03	./module04/ex03/AMateria.cpp
#						./module04/ex03/Character.cpp
#						./module04/ex03/Cure.cpp
#						./module04/ex03/Ice.cpp
#						./module04/ex03/main.cpp
#						./module04/ex03/MateriaSource.cpp)

#
#add_executable(5ex00		./module05/ex00/main.cpp
#							./module05/ex00/Bureaucrat.cpp)
#add_executable(5ex01		./module05/ex01/main.cpp
#							./module05/ex01/Bureaucrat.cpp
#							module05/ex01/Form.cpp module05/ex01/Form.hpp)

#add_executable(5ex03		module05/ex03/main.cpp
#							module05/ex03/Bureaucrat.cpp
#							module05/ex03/Form.cpp module05/ex01/Form.hpp
#							module05/ex03/ShrubberyCreationForm.cpp
#							module05/ex03/ShrubberyCreationForm.hpp
#							module05/ex03/RobotomyRequestForm.cpp
#							module05/ex03/RobotomyRequestForm.hpp
#							module05/ex03/PresidentialPardon-orm.cpp
#							module05/ex03/PresidentialPardonForm.hpp
#							module05/ex03/Intern.cpp
#							module05/ex03/Intern.hpp)

#add_executable(6ex00		module06/ex00/main.cpp)
#add_executable(6ex01		module06/ex01/main.cpp)
#add_executable(6ex02		module06/ex02/main.cpp)
#add_executable(7ex00		module07/ex00/main.cpp)
#add_executable(7ex01		module07/ex01/main.cpp)
#add_executable(7ex02		module07/ex02/main.cpp)
#add_executable(test			test/07_02.cpp)
add_executable(8ex00		module08/ex00/main.cpp module08/ex00/easyfind.hpp)
